[build-system]
requires = ['meson-python']
build-backend = 'mesonpy'

[project]
name = "pyrime"
dynamic = ["version"]
description = "rime for python, attached to prompt-toolkit keybindings for some prompt-toolkit applications such as ptpython"
readme = "README.md"
# type_a | type_b
requires-python = ">= 3.10"
keywords = ["rime", "ptpython", "prompt-toolkit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
color = ["colorama"]
dev = ["pytest-cov", "wcwidth"]
prompt-toolkit = ["prompt-toolkit", "platformdirs"]
ptpython = ["ptpython", "platformdirs"]

[[project.authors]]
name = "Wu, Zhenyu"
email = "wuzhenyu@ustc.edu"

[project.license]
text = "GPL v3"

[project.urls]
Homepage = "https://pyrime.readthedocs.io"
Download = "https://github.com/Freed-Wu/pyrime/releases"
"Bug Report" = "https://github.com/Freed-Wu/pyrime/issues"
Source = "https://github.com/Freed-Wu/pyrime"

[tool.mdformat]
number = true

[tool.codespell]
ignore-words-list = "rime, rightt"

[tool.doq]
template_path = "templates"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = ["D205", "D400"]
preview = true

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\s*import tomli as tomllib",
]

[tool.cibuildwheel]
archs = ["all"]
skip = "*37-* *38-* *39-*"
test-requires = ["pytest"]
test-command = "pytest {project}"
